--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,6 +33,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   my_new_project:
-    # Applies to all files under models/example/
-    example:
-      materialized: view
+    # Delete: # Applies to all files under models/example/
+    # Delete: example:
+    # Delete:  materialized: view
