--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,11 +28,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
-# In this example config, we tell dbt to build all models in the example/ directory
-# as tables. These settings can be overridden in the individual model files
+# In this example config, we tell dbt to build all models in the staging_2/ directory
+# as tables or views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
   my_new_project:
-    # Delete: # Applies to all files under models/example/
-    # Delete: example:
-    # Delete:  materialized: view
+    # Applies to all files under models/staging_2/
+     staging:
+      materialized: view   
+     staging_2:
+      materialized: view
